fixed image vert align

--- a/css/shazhack.css
+++ b/css/shazhack.css
@@ -154,6 +154,7 @@
 .shazhack .sheet-header .profile-img {
   object-fit: contain;
   -webkit-box-flex: 0;
+  vertical-align: top;
   -ms-flex: 0 0 200px;
   flex: 0 0 200px;
   height: 200px;
